# OpenCV_FaceDetection

./: CMakeLists.txt
src/: opencv_facedetection.cpp~  opencv_facedetection2.cpp~  opencv_facedetector.cpp  prova2.cpp~  prova3.cpp~
